<resources>
    <string name="app_name">Saral HarLabh</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="needhelp">Need Help ?</string>
    <string name="easygovcontact">18001802128</string>
    <string name="easygovemail">saral.haryana@gov.in</string>
    <string name="chat">Chat with Us</string>
    <string name="about">About</string>
    <string name="aboutus">About Us</string>
    <string name="career">Career</string>
    <string name="contact">Contact Us</string>
    <string name="read">Read More</string>
    <string name="faq">FAQ</string>
    <string name="privacy">Privacy Policy</string>
    <string name="tnc">Terms and Conditions</string>
    <string name="signin">Sign In</string>
    <string name="ad_phn">Aadhaar number/Phone number</string>
    <string name="pass">Password</string>
    <string name="forgot">Forgot Password?</string>
    <string name="signIn">Sign In</string>
    <string name="signCaps">SIGN IN</string>
    <string name="noaccnt">Don\'t have Saral Account ?</string>
    <string name="signup">Sign Up</string>
    <string name="invalid">Invalid Number or Password</string>
    <string name="next">NEXT</string>
    <string name="already">Already have Saral Account?</string>
    <string name="aadhaar">Aadhaar Card</string>
    <string name="phn">Phone Number</string>
    <string name="whyaadhaar">Why Aadhaar?</string>
    <string name="whynumber">Why Number?</string>
    <string name="enteraadhaar">Enter your 12 digit aadhaar number</string>
    <string name="enterAdhr">Enter 12 digit Aadhaar Card number of Applicant.</string>
    <string name="aadhaarno">Aadhaar number</string>
    <string name="staticagree">By clicking NEXT you agree to Saral</string>
    <string name="and">&amp;</string>
    <string name="otpsent">We have sent you the verification code on your Aadhaar linked number</string>
    <string name="resend">Resend OTP</string>
    <string name="verify">VERIFY</string>
    <string name="createPass">Create password for your account</string>
    <string name="enterPass">Enter Password</string>
    <string name="cnfrm">Confirm Password</string>
    <string name="usePass">Use this password next time when you are coming to Saral</string>
    <string name="enterNumber">Please enter your 10 digit phone number</string>
    <string name="selectoptn">Please select an option to verify aadhaar card</string>
    <string name="getonPhn">Get verification code on phone</string>
    <string name="biometric">Biometric</string>
    <string name="iris">Iris</string>
    <string name="fingerprint">Finger Print</string>
    <string name="otp">OTP ( One Time Password )</string>
    <string name="analysis">OUR ANALYSIS</string>
    <string name="valueformoney">VALUE FOR MONEY</string>
    <string name="firstName">Name</string>
    <string name="contactno">Contact Number</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="date">Date</string>
    <string name="gotit">GOT IT</string>
    <string name="otpmethod">OTP (One Time Password)</string>
    <string name="otpinfo">In this verification method we will send the 6 digit verification code on your aadhaar linked number to verify your aadhaar card</string>
    <string name="continueWith">Continue With</string>
    <string name="verificationMode">Verification mode</string>
    <string name="alreadyexist">User already registered. Tap here to </string>
    <string name="verification">Verification</string>
    <string name="getting">Getting problem?</string>
    <string name="or">Or</string>
    <string name="signUpUsingAdhar">Sign Up using </string>
    <string name="title_activity_select_service">SelectServiceActivity</string>
    <string name="iwant">I want</string>
    <string name="payments">Payments</string>
    <string name="documents">Documents</string>
    <string name="logout">LOG OUT</string>
    <string name="empowering">What benefit your want from government?</string>
    <string name="selectState">Select State</string>
    <string name="searchDistrict">Search District</string>
    <string name="forgottext">To reset your password please enter your Aadhaar number or phone number used to create your account</string>
    <string name="contin">CONTINUE</string>
    <string name="skip">SKIP</string>
    <string name="signUpCaps">SIGN UP</string>
    <string name="getStarted">Sign in to get started</string>
    <string name="poptextsign">Sign in the account to get the desired </string>
    <string name="poptextsign1">government services and schemes</string>
    <string name="netIssue">Check your Internet Connection</string>
    <string name="serverIssue">Unable to connect to Saral server</string>
    <string name="selectdoctype">Select Document Type</string>
    <string name="documenttype">Document Type</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="benefits">Benefits</string>
    <string name="knowmore">Know more</string>
    <string name="checkeligible">Check Eligibility</string>
    <string name="yourstory">Your Story</string>
    <string name="attachfile">Attach File</string>
    <string name="opencamera">Open Camera</string>
    <string name="choosegallery">Select from Documents</string>
    <string name="easygovlibrary">Saral Library</string>
    <string name="street1">Street1</string>
    <string name="Street2">Street2</string>
    <string name="city">City</string>
    <string name="zip">Zip code</string>
    <string name="Rs">₹</string>
    <string name="information">Information</string>
    <string name="havingaadhar">Does applicant have Aadhaar Card?</string>
    <string name="havingaadharmyself">Do you have Aadhaar Card?</string>
    <string name="applicatiodetails">Applicant Details</string>
    <string name="schemes">Schemes</string>
    <string name="elegibility">Eligibility</string>
    <string name="application">Application</string>
    <string name="checkout">Checkout</string>
    <string name="title_activity_success_ful_payment">SuccessFulPaymentActivity</string>
    <string name="successfulapplied">Successfully Applied</string>
    <string name="congatulation">Congratulation!</string>
    <string name="applied">Your Application is successfully applied</string>
    <string name="save">CONFIRM <![CDATA[&]]> SAVE</string>
    <string name="view">VIEW THIS APPLICATION</string>
    <string name="esign">Esign This Application</string>
    <string name="thankyou">Thank You</string>
    <string name="opportunity">For giving us opportunity to serve you</string>
    <string name="title_activity_esign_form">EsignFormActivity</string>
    <string name="letgetStarted">Didn\'t find what you were looking for ? Get Started</string>
    <string name="getStartedToSurvery">Getting confused?</string>
    <string name="letushelpyou">Let us help you to find the best schemes for you?</string>
    <string name="empoweringpeople">EMPOWERING PEOPLE</string>
    <string name="deliveringconvenience">DELIVERING CONVENIENCE</string>
    <string name="management">Schemes Applied</string>
    <string name="searchapplication">Search Application</string>
    <string name="filterapplication">Filter Application</string>
    <string name="appstatus">Application Status</string>
    <string name="whyUseAadhaar">Aadhaar is a 12-digit unique identification number can be used as the sole identification proof when applying for any services.</string>
    <string name="whyuseNumber">Phone number is a single way to identify yourself.It helps people find you and helps keeps you safe.</string>
    <string name="irisInfo">Iris recognition biometric systems apply pattern-recognition techniques to images of the irises of an individual\'s eyes.</string>
    <string name="fingerInfo">Finger print brings a convenient form of security that is much more convenient than a password (and long password!)</string>
    <string name="Services">Services</string>
    <string name="saves"><![CDATA[&]]></string>
    <string name="tryagain">TRY AGAIN</string>
    <string name="nextTime">Unfortunately, we could not determine your eligibility. We are adding new schemes everyday, please check with us soon again.</string>
    <string name="checkToEsign">Please Check here to Esign this Application</string>
    <string name="govtFee">Government Fee</string>
    <string name="proffCharge">Professional Charge</string>
    <string name="subtotal">Subtotal</string>
    <string name="gstIncluded">18% GST included</string>
    <string name="noResult">No Result Found</string>
    <string name="attachDocs">Attach Document</string>
    <string name="ServiceLevel">Service Level</string>
    <string name="title_activity_payment_failed">PaymentFailedActivity</string>
    <string name="sorry">Sorry! We could not process your Payment.</string>
    <string name="tnfailed">Payment Failed</string>
    <string name="startover">Start Over Again</string>
    <string name="upDate">This version is outdated. Please update the new version.</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="skipNow">Skip Now</string>
    <string name="recvdPayment">We\'ve successfully received a payment from your account</string>
    <string name="yourDetails">Your Details</string>
    <string name="yourDetailstext">Complete your account by filling the details below</string>
    <string name="email">Email Address</string>
    <string name="sort">SORT</string>
    <string name="filter">FILTER</string>
    <string name="sortby">SortBy</string>
    <string name="selectLanguage">Select Language</string>
    <string name="english">English</string>
    <string name="hindi">हिंदी</string>
    <string name="apply">Apply</string>
    <string name="otpsents">We have sent you the verification code on your phone number</string>
    <string name="innovate"> Innovated <![CDATA[&]]> Engineered by EasyGov</string>
    <string name="pay">Pay</string>
    <string name="billing">Billing Address</string>
    <string name="attachments">Attachments</string>
    <string name="noteligible">Sorry, You are not eligible</string>
    <string name="eligible">Yayy! You are eligible</string>
    <string name="state">State</string>
    <string name="district">District</string>
    <string name="noscheme">No Schemes Found</string>
    <string name="upload">Upload </string>
    <string name="yes"> YES </string>
    <string name="no">  NO  </string>
    <string name="ok">OK</string>
    <string name="coupon">Coupon</string>
    <string name="done">Done</string>
    <string name="myself">  Myself  </string>
    <string name="someoneelse">Someone else</string>
    <string name="cancel">CANCEL</string>
    <string name="selectdistrict">Select District</string>
    <string name="haryana">Haryana</string>
    <string name="invalidnumber">Invalid Number</string>
    <string name="saveapprove">SAVE <![CDATA[&]]> APPROVE</string>
    <string name="Saved">SAVE </string>
    <string name="validDate">Please enter a valid date</string>
    <string name="gethelp">PRESS HERE TO GET HELP</string>
    <string name="gettingconfused">Getting Confused ?</string>
    <string name="schemeorservices"><![CDATA[Type here for Services & Schemes]]></string>
    <string name="confirmapplication">Confirm your Application</string>
    <string name="select">Select</string>
    <string name="days"> Days</string>
    <string name="applicationdetails">Application Details</string>
    <string name="male">Male</string>
    <string name="femlae">Female</string>
    <string name="transgender">Transgender</string>
    <string name="print">Print receipt</string>
    <string name="submit">Submit</string>
    <string name="what_could_be_improved">What could be improved?</string>
    <string name="write_your_feedback_here">Write your feedback here...</string>
    <string name="rate_your_experience_with_us">Rate your experience with us</string>
</resources>