<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/back"
    android:clickable="true"
    android:id="@+id/rlPhoneSignIn"
    android:layout_width="match_parent"
    android:focusableInTouchMode="false"

    android:layout_height="match_parent"


    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/llIntros"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/sixtyDp"
            android:text="@string/signup"
            android:gravity="center"
            android:textStyle="bold"
            android:background="@color/notifycolor"
            android:textColor="@color/white"
            android:textSize="@dimen/twentySp"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_back"
            android:layout_centerVertical="true"
            android:id="@+id/ivPhoneSignBack"
            android:layout_marginLeft="@dimen/activity_vertical_margin"/>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/eightDp"
        android:text="@string/enterNumber"
        android:gravity="center"
        android:id="@+id/tvHint"
        android:textSize="@dimen/sixteenSp"
        android:layout_below="@+id/llIntros"
        android:layout_marginTop="@dimen/twentyFourDp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"

        android:text="@string/alreadyexist"
        android:gravity="center"
        android:singleLine="true"
        android:visibility="gone"
        android:textColor="@color/magma"
        android:id="@+id/tvExist1"
        android:textSize="@dimen/sixteenSp"
        android:layout_below="@+id/llIntros"
        android:layout_marginTop="@dimen/thirtyTwoDp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/fourDp"
        android:text="@string/signIn"
        android:gravity="center"
        android:singleLine="true"
        android:visibility="gone"
        android:textColor="@color/magma"
        android:id="@+id/tvExist"
        android:textSize="@dimen/sixteenSp"
        android:layout_below="@+id/tvExist1"
        />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/oneHundredDp"
        android:layout_below="@+id/llIntros"
        android:layout_marginLeft="@dimen/thirtyTwoDp"
        android:layout_marginRight="@dimen/thirtyTwoDp"
        app:errorEnabled="true"
        android:id="@+id/tilPhn"
        android:hint="@string/phn"

        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etphnNo"
            android:inputType="number"
            android:maxLines="1"
            android:textSize="@dimen/fourteenSp"
            android:singleLine="true"
            android:maxLength="10"

            />
    </android.support.design.widget.TextInputLayout>







    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:background="@drawable/box"
        android:paddingTop="@dimen/twelveDp"
        android:layout_marginLeft="@dimen/fortyDp"
        android:layout_marginRight="@dimen/fortyDp"
        android:paddingBottom="@dimen/twelveDp"
        android:textColor="@color/white"
        android:gravity="center"
        android:id="@+id/tvNextPhone"
        android:textSize="@dimen/twentySp"
        android:layout_above="@+id/rlBot"
        android:layout_centerVertical="true"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:gravity="bottom"
        android:layout_alignParentBottom="true"
        android:id="@+id/rlBot"

        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/eightyDp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/fourteenSp"
            android:gravity="center"
            android:id="@+id/tvAnchor"
            android:layout_marginRight="@dimen/eightDp"
            android:layout_marginLeft="@dimen/eightDp"
            android:text="@string/staticagree"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:layout_below="@+id/tvAnchor">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/fourDp"

                android:id="@+id/tvTncEasyPhn"
                android:textStyle="bold"
                android:textSize="@dimen/twelveSp"
                android:paddingStart="@dimen/fourDp"
                android:paddingTop="@dimen/fourDp"
                android:paddingBottom="@dimen/fourDp"
                android:textColor="@color/buttoncolor"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/twoDp"

                android:text="@string/tnc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/tvAnd"
                android:textStyle="bold"
                android:textSize="@dimen/twelveSp"
                android:padding="@dimen/twoDp"


                android:layout_marginTop="@dimen/twoDp"
                android:layout_toRightOf="@+id/tvTncEasyPhn"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/and"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:id="@+id/tvPrivacyEasyPhn"
                android:textStyle="bold"

                android:paddingTop="@dimen/fourDp"
                android:paddingBottom="@dimen/fourDp"
                android:paddingRight="@dimen/fourDp"
                android:layout_marginLeft="@dimen/twoDp"
                android:textSize="@dimen/twelveSp"
                android:textColor="@color/buttoncolor"
                android:layout_toRightOf="@+id/tvAnd"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:text="@string/privacy"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>